--- a/tutorial_notebooks/oracle/qml4omics-sage_oracle.ipynb
+++ b/tutorial_notebooks/oracle/qml4omics-sage_oracle.ipynb
@@ -12,7 +12,7 @@
     "import pandas as pd\n",
     "import sys, os, re\n",
     "\n",
-    "dir_home = re.sub( 'QMLBench.*', 'QMLBench', os.getcwd() )\n",
+    "dir_home = re.sub( 'qml4omics.*', 'qml4omics', os.getcwd() )\n",
     "\n",
     "sys.path.append( dir_home )\n",
     "\n",
