--- a/tutorial_notebooks/qml_experiment_generators/generate_experiments.ipynb
+++ b/tutorial_notebooks/qml_experiment_generators/generate_experiments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,12 +40,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# paths\n",
-    "dir_home = re.sub( 'QMLBench.*', 'QMLBench', os.getcwd() )\n",
+    "dir_home= re.sub( 'qml4omics.*', 'qml4omics', os.getcwd() )\n",
     "dir_config = os.path.join( dir_home, 'configs' )\n",
     "file_template_config = os.path.join( dir_config, 'config.yaml' )\n",
     "dir_config_new = os.path.join( dir_config, 'configs_qml_gridsearch' )\n",
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
        "864"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "qml",
+   "display_name": "qml4omics-testenv",
    "language": "python",
    "name": "python3"
   },
