add some markdown commnets

--- a/tutorial_notebooks/oracle/qml4omics-sage_oracle.ipynb
+++ b/tutorial_notebooks/oracle/qml4omics-sage_oracle.ipynb
@@ -23,6 +23,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Specifying paths and type of Sage to train"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Normally, one would train the Sage on the experimental results in their system.  For the purposes of the tutorial, we have provided a pre-trained Sage model on a more extensive set of dataets and experiments using a Random Forest as the underlying ML model for the Sage in this instance"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -44,8 +58,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Read in the data on which the Sage would be trained"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,19 +347,32 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# select a held out dataset on which to test the trained Sage model\n",
-    "held_out_df = results_df[results_df['Dataset'] == 'spirals_data-2.csv' ]\n",
-    "results_df = results_df[results_df['Dataset'] != 'spirals_data-2.csv' ]\n"
+    "### Select a held out dataset on which to test the trained Sage model\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "held_out_df = results_df[results_df['Dataset'] == 'spirals_data-2.csv' ]\n",
+    "results_df = results_df[results_df['Dataset'] != 'spirals_data-2.csv' ]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Train the Sage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,6 +382,15 @@
     "    qs = QuantumSage(results_df)\n",
     "else:\n",
     "     qs = pickle.load( open(file_sage, 'rb'))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Train the sage\n",
+    "\n",
+    "For the purposes of this tutorial, we have pre-trained a sage object on a more extensive dataset than in the tutorial github so leave the retrain flag as *False*"
    ]
   },
   {
@@ -393,13 +436,21 @@
     }
    ],
    "source": [
-    "# Train the sage - for the purposes of this tutorial, we have pre-trained a sage object on a more extensive \n",
-    "# dataset than in the tutorial github so leave the retrain flag as False\n",
+    "\n",
     "retrain = False\n",
     "\n",
     "if retrain or (len(qs._results_subsages) == 0):\n",
     "    qs.train_sub_sages(sage_type=sage_type)\n",
     "    pickle.dump( qs, open(file_sage,'wb') )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Plot results from training\n",
+    "\n",
+    "During training, the data is split into train and test. Sage does a hyperparameter optimization using RandomizeSearchCV from scikit-learn and on the train split and reports the performance metrics when predicting on the test split.\n"
    ]
   },
   {
@@ -469,7 +520,6 @@
     }
    ],
    "source": [
-    "# Plot results from training - this is the \n",
     "qs.plot_results()"
    ]
   },
