minor updates to certain files, add markups to notebooks

--- a/tutorial_notebooks/qml_experiment_generators/generate_experiments.ipynb
+++ b/tutorial_notebooks/qml_experiment_generators/generate_experiments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,8 +20,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## The Cell below sets the list of parameters to iterate over and generate combinations."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,8 +46,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Let's set the paths for input and outputs."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,11 +73,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## The cell below will now generate dataframes with unique combinations of QML method parameters."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -130,19 +146,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## The dataframe generated previously will now be used to populate the individual config.yaml files, for each dataset you want to include.\n",
+    "## These yamls files can then be iteratively used with the main function (qml4omics-profiler.py), using the HPC slurm script provided in slurm_scripts/job_submission_forloop.sh."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "864"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ValueError",
+     "evalue": "Unable to coerce to Series, length must be 1: given 4",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[32m/var/folders/b8/mhwk24h93j30s2r57fb_4q3wsywh_6/T/ipykernel_64643/3576618105.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m     22\u001b[39m     \u001b[38;5;66;03m# Use all files\u001b[39;00m\n\u001b[32m     23\u001b[39m     files = list(np.random.choice( files, int(len(files)*\u001b[32m1\u001b[39m)))\n\u001b[32m     24\u001b[39m     \u001b[38;5;66;03m# Or use a random sample of 10% of files\u001b[39;00m\n\u001b[32m     25\u001b[39m     \u001b[38;5;66;03m# files = list(np.random.choice( files, int(len(files)*1)))\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m26\u001b[39m     used_files = used_files + files\n\u001b[32m     27\u001b[39m     p_c_t = p_c.copy()\n\u001b[32m     28\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m (\u001b[33m'moons'\u001b[39m \u001b[38;5;28;01min\u001b[39;00m dir_data) | (\u001b[33m'circles'\u001b[39m \u001b[38;5;28;01min\u001b[39;00m dir_data):\n\u001b[32m     29\u001b[39m         p_c_t = p_c_t[ p_c_t[\u001b[33m'embedding'\u001b[39m] == \u001b[33m'none'\u001b[39m ]\n",
+      "\u001b[32m~/opt/miniconda3/envs/qml4omics-testenv/lib/python3.11/site-packages/pandas/core/ops/common.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(self, other)\u001b[39m\n\u001b[32m     72\u001b[39m                     \u001b[38;5;28;01mreturn\u001b[39;00m NotImplemented\n\u001b[32m     73\u001b[39m \n\u001b[32m     74\u001b[39m         other = item_from_zerodim(other)\n\u001b[32m     75\u001b[39m \n\u001b[32m---> \u001b[39m\u001b[32m76\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m method(self, other)\n",
+      "\u001b[32m~/opt/miniconda3/envs/qml4omics-testenv/lib/python3.11/site-packages/pandas/core/arraylike.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(self, other)\u001b[39m\n\u001b[32m    182\u001b[39m         deer      NaN     NaN\n\u001b[32m    183\u001b[39m         elk       \u001b[32m1.7\u001b[39m     NaN\n\u001b[32m    184\u001b[39m         moose     \u001b[32m3.0\u001b[39m     NaN\n\u001b[32m    185\u001b[39m         \"\"\"\n\u001b[32m--> \u001b[39m\u001b[32m186\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m self._arith_method(other, operator.add)\n",
+      "\u001b[32m~/opt/miniconda3/envs/qml4omics-testenv/lib/python3.11/site-packages/pandas/core/frame.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(self, other, op)\u001b[39m\n\u001b[32m   7906\u001b[39m \n\u001b[32m   7907\u001b[39m         axis: Literal[\u001b[32m1\u001b[39m] = \u001b[32m1\u001b[39m  \u001b[38;5;66;03m# only relevant for Series other case\u001b[39;00m\n\u001b[32m   7908\u001b[39m         other = ops.maybe_prepare_scalar_for_op(other, (self.shape[axis],))\n\u001b[32m   7909\u001b[39m \n\u001b[32m-> \u001b[39m\u001b[32m7910\u001b[39m         self, other = self._align_for_op(other, axis, flex=\u001b[38;5;28;01mTrue\u001b[39;00m, level=\u001b[38;5;28;01mNone\u001b[39;00m)\n\u001b[32m   7911\u001b[39m \n\u001b[32m   7912\u001b[39m         \u001b[38;5;28;01mwith\u001b[39;00m np.errstate(all=\u001b[33m\"ignore\"\u001b[39m):\n\u001b[32m   7913\u001b[39m             new_data = self._dispatch_frame_op(other, op, axis=axis)\n",
+      "\u001b[32m~/opt/miniconda3/envs/qml4omics-testenv/lib/python3.11/site-packages/pandas/core/frame.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(self, other, axis, flex, level)\u001b[39m\n\u001b[32m   8183\u001b[39m                 raise ValueError(\n\u001b[32m   8184\u001b[39m                     \u001b[33mf\"Unable to coerce list of {type(right[0])} to Series/DataFrame\"\u001b[39m\n\u001b[32m   8185\u001b[39m                 )\n\u001b[32m   8186\u001b[39m             \u001b[38;5;66;03m# GH#17901\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m8187\u001b[39m             right = to_series(right)\n\u001b[32m   8188\u001b[39m \n\u001b[32m   8189\u001b[39m         \u001b[38;5;28;01mif\u001b[39;00m flex \u001b[38;5;28;01mis\u001b[39;00m \u001b[38;5;28;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;28;01mand\u001b[39;00m isinstance(right, DataFrame):\n\u001b[32m   8190\u001b[39m             \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28;01mnot\u001b[39;00m left._indexed_same(right):\n",
+      "\u001b[32m~/opt/miniconda3/envs/qml4omics-testenv/lib/python3.11/site-packages/pandas/core/frame.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(right)\u001b[39m\n\u001b[32m   8129\u001b[39m                     )\n\u001b[32m   8130\u001b[39m                 right = left._constructor_sliced(right, index=left.index, dtype=dtype)\n\u001b[32m   8131\u001b[39m             \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m   8132\u001b[39m                 \u001b[38;5;28;01mif\u001b[39;00m len(left.columns) != len(right):\n\u001b[32m-> \u001b[39m\u001b[32m8133\u001b[39m                     raise ValueError(\n\u001b[32m   8134\u001b[39m                         msg.format(req_len=len(left.columns), given_len=len(right))\n\u001b[32m   8135\u001b[39m                     )\n\u001b[32m   8136\u001b[39m                 right = left._constructor_sliced(right, index=left.columns, dtype=dtype)\n",
+      "\u001b[31mValueError\u001b[39m: Unable to coerce to Series, length must be 1: given 4"
+     ]
     }
    ],
    "source": [
