--- a/tutorial/Artificial_data_generation/example_data_generation.ipynb
+++ b/tutorial/Artificial_data_generation/example_data_generation.ipynb
@@ -29,9 +29,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e776a0c7",
+   "metadata": {},
+   "source": [
+    "### Examples of how to generate some artifical datasets"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "c05f99b7",
+   "execution_count": null,
+   "id": "72d7019b",
    "metadata": {},
    "outputs": [
     {
