--- a/tutorial/Artificial_data_generation/example_data_generation.ipynb
+++ b/tutorial/Artificial_data_generation/example_data_generation.ipynb
@@ -10,7 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/krhriss/IBM/QBioCode/venv/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/opt/homebrew/anaconda3/envs/qml/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "72d7019b",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "4255278e",
    "metadata": {},
    "outputs": [
@@ -183,9 +183,9 @@
    "source": [
     "\n",
     "N_SAMPLES = list(range(100, 160, 50))\n",
-    "N_FEATURES = list(range(10, 60, 20))\n",
-    "N_INFORMATIVE = list(range(2,8,4))\n",
-    "N_REDUNDANT = list(range(2,8,4))\n",
+    "N_FEATURES = list(range(10, 40, 20))\n",
+    "N_INFORMATIVE = list(range(2, 8, 4))\n",
+    "N_REDUNDANT = list(range(2, 8, 4))\n",
     "N_CLASSES = list(range(2, 4, 6))\n",
     "N_CLUSTERS_PER_CLASS = list(range(1, 2, 3))\n",
     "WEIGHTS = [[0.3, 0.7], [0.4, 0.6], [0.5, 0.5]]\n",
@@ -308,7 +308,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "qml",
    "language": "python",
    "name": "python3"
   },
@@ -322,7 +322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.22"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
