--- a/tutorial/QSage/qsage.ipynb
+++ b/tutorial/QSage/qsage.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,9 +12,6 @@
     "import pandas as pd\n",
     "import sys, os, re\n",
     "\n",
-    "dir_home = re.sub( 'QBioCode.*', 'QBioCode', os.getcwd() )\n",
-    "\n",
-    "sys.path.append( dir_home )\n",
     "\n",
     "from apps.sage.sage import QuantumSage\n",
     "import math\n",
@@ -23,12 +20,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### NOTE: if you haven't install the package with pip install please run the following commands in code cell\n",
+    "\n",
+    "dir_home = re.sub( 'QBioCode.*', 'QBioCode', os.getcwd() )\n",
+    "\n",
+    "sys.path.append( dir_home )\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Download the pre-trained model weights from: https://ibm.biz/QSageModel"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "dir_home = ''\n",
     "dir_results = os.path.join( dir_home, 'results' )\n",
     "\n",
     "file_input = os.path.join( dir_results, 'Compiled_QMLBench_results.csv' )\n",
