--- a/tutorial/QProfiler/example_qprofiler.ipynb
+++ b/tutorial/QProfiler/example_qprofiler.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "c49f4c99",
    "metadata": {},
    "outputs": [
@@ -21,11 +21,23 @@
     "\n",
     "import sys, os, re\n",
     "\n",
-    "dir_home = re.sub( 'QBioCode.*', 'QBioCode', os.getcwd() )\n",
+    "#dir_home = re.sub( 'QBioCode.*', 'QBioCode', os.getcwd() )\n",
     "\n",
-    "sys.path.append( dir_home )\n",
+    "#sys.path.append( dir_home )\n",
     "\n",
     "import qbiocode as qbc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05afda86",
+   "metadata": {},
+   "source": [
+    "#### NOTE: if you haven't install the package with pip install please run the following commands in code cell\n",
+    "\n",
+    "dir_home = re.sub( 'QBioCode.*', 'QBioCode', os.getcwd() )\n",
+    "\n",
+    "sys.path.append( dir_home )\n"
    ]
   },
   {
@@ -34,7 +46,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "# Examples of how to run Profiler with some artifical datasets"
+    "# Examples of how to run QProfiler with some artifical datasets"
    ]
   },
   {
@@ -96,7 +108,7 @@
     "\n",
     "Profiler can be called from the commandline as below\n",
     "```\n",
-    "python apps/profiler/profiler.py --config-path=[path to QBioCode]/tutorial/Profiler/configs --config-name=config.yaml\n",
+    "python qprofiler.py --config-path=[path to QBioCode]/tutorial/Profiler/configs --config-name=config.yaml\n",
     "```\n",
     "\n",
     "Or as follows"
@@ -104,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "dc3eb303",
    "metadata": {},
    "outputs": [
@@ -254,7 +266,7 @@
     }
    ],
    "source": [
-    "import apps.profiler.profiler as profiler\n",
+    "import apps.qprofiler.qprofiler as profiler\n",
     "import yaml\n",
     "\n",
     "config = yaml.safe_load(open('configs/config.yaml', 'r'))\n",
