--- a/tutorial/QSage/qsage.ipynb
+++ b/tutorial/QSage/qsage.ipynb
@@ -9,26 +9,46 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
+    "\n",
+    "\n",
     "import pandas as pd\n",
     "import sys, os, re\n",
     "\n",
     "\n",
-    "from apps.sage.sage import QuantumSage\n",
-    "import math\n",
-    "import pickle\n",
     "\n"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "#### NOTE: if you haven't install the package with pip install please run the following commands in code cell\n",
-    "\n",
     "dir_home = re.sub( 'QBioCode.*', 'QBioCode', os.getcwd() )\n",
+    "dir_home = '../../apps/'\n",
     "\n",
-    "sys.path.append( dir_home )\n"
+    "\n",
+    "sys.path.append( dir_home )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "from sage.sage import QuantumSage\n",
+    "import math\n",
+    "import pickle\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
